--- a/Task-08/Task-08.csproj
+++ b/Task-08/Task-08.csproj
@@ -4,14 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19DA0DD2-A0FF-4EC6-B3C0-4F30B9C3366B}</ProjectGuid>
+    <ProjectGuid>{47A54C50-85E3-405F-93F0-584C79593261}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>eleventhSolution</RootNamespace>
-    <AssemblyName>eleventhSolution</AssemblyName>
+    <RootNamespace>eighthSolution</RootNamespace>
+    <AssemblyName>Task-08</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
